fix too large images in gallery modal

--- a/src/style/pages/_project-detail.scss
+++ b/src/style/pages/_project-detail.scss
@@ -245,6 +245,7 @@
     left: 50%;
     z-index: 10;
     max-width: 90%;
+    max-height: 100vh;
     transform: translate(-50%, -50%);
   }
 
